--- a/style.css
+++ b/style.css
@@ -1,56 +1,95 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #000000;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Roboto Mono', monospace;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 
 body {
-    background-color:#000000;
+  background-color: rgb(255, 87, 87);
 }
 
-.link-bio {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-    margin: 40px auto;
-    gap: 20px;
+body * {
+  font-family: 'Poppins', sans-serif;
+  color: rgb(255, 255, 255);
 }
 
-
-.link-bio h1 {
-    color: rgb(255, 255, 152);
-    font-size: 40px;
-    font-weight: 500;
+#container {
+  width: 360px;
+  margin: 56px auto 0px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px;
 }
 
-.link-bio p {
-    color: rgb(255, 255, 152);
-    font-size: 16px;
-    font-weight: 400;
+#profile {
+  text-align: center;
+  padding: 24px;
 }
 
-.link-bio a {
-    background-color: rgb(255, 255, 152);
-    color: #000000;
-    padding: 15px;
-    width: 100%;
-    text-decoration: none;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    border: solid 2px #fff;
-    border-radius: 10px;
+#container #profile img {
+  width: 130px;
+  height: 130px;
+  border-radius: 100%;
+  border: solid 1px rgb(255, 255, 255)
 }
 
-.link-bio a:hover {
-    background-color: #000000;
-    color: #ffffff;
+h1 {
+  font-size: 34px;
+  color: rgb(255, 255, 255);
 }
 
-.eu p{
-    color: #fff;
+#profile p {
+  font-weight: 700;
+  line-height: 24px;
+  margin-top: 8px;
+  color: rgb(255, 255, 255);
+}
+
+/* LINKS */
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-top: 25px;
+}
+
+ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 16px 24px;
+
+  background: rgba(185, 185, 185, 0.1);
+  border: 1px solid rgba(209, 209, 209, 0.5);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
+
+  transition: background 0.2s;
+}
+
+/*Links*/
+.links-a {
+  padding-right: 5px;
+  font-size: 25px;
+}
+.links-b {
+  padding-right: 5px;
+  font-size: 25px;
+}
+.links-c{
+  padding-right: 5px;
+  font-size: 25px;
+}
+
+footer {
+  padding: 24px 0;
+  text-align: center;
 }
